# vulkanizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua
src/: buffer.cpp  buffer.h  camera.cpp  camera.h  common.h  device.cpp  device.h  draw.cpp  draw.h  frame_pacing.cpp  frame_pacing.h  geometry.cpp  geometry.h  gpu_profiler.cpp  gpu_profiler.h  gui.cpp  gui.h  main.cpp  mesh.cpp  mesh.h  pass.cpp  pass.h  pch.h  pipeline.cpp  pipeline.h  query.cpp  query.h  resources.cpp  resources.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  sync.cpp  sync.h  texture.cpp  texture.h  utils.cpp  utils.h  window.cpp  (+1 more)
src/core/: buffer.cpp  buffer.h  device.cpp  device.h  frame_pacing.cpp  frame_pacing.h  pass.cpp  pass.h  pipeline.cpp  pipeline.h  query.cpp  query.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h
src/shaders/: color.frag  constants.h  generate_draws.comp  geometry.h  geometry.mesh  geometry.task  geometry.vert  gui.frag  gui.vert  hzb_downsample.comp  scene.mesh  scene.task  scene.vert  shader.frag  shader.vert  shader_common.h  shader_constants.h  shader_interop.h
